add title and icon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Booklett</title>
+      <link rel="icon" type="image/png" href="/Combo shape.svg" />
+      <meta
+              name="description"
+              content="Booklett is a smart Library Management System for managing books, users, and borrowing records efficiently."
+      />
   </head>
   <body>
     <div id="root"></div>
